# inplace_vector

./: CMakeLists.txt  README.md
include/beman/inplace_vector/: inplace_vector.hpp
src/beman/inplace_vector/tests/: CMakeLists.txt  inplace_vector.gtest.cpp
